@@ -22,4 +22,16 @@ cd "$(dirname "${DB_MIGRATION_IMPORTER_PATH}")"
 # Run database migration importer tool.
 #
 
-java -cp com.liferay.portal.tools.db.migration.importer.jar:lib/* com.liferay.portal.tools.db.migration.importer.DBMigrationImport "$@"
+java \
+	--add-opens=java.base/java.lang=ALL-UNNAMED \
+	--add-opens=java.base/java.lang.invoke=ALL-UNNAMED \
+	--add-opens=java.base/java.lang.reflect=ALL-UNNAMED \
+	--add-opens=java.base/java.net=ALL-UNNAMED \
+	--add-opens=java.base/java.util=ALL-UNNAMED \
+	--add-opens=java.base/sun.net.www.protocol.http=ALL-UNNAMED \
+	--add-opens=java.base/sun.net.www.protocol.https=ALL-UNNAMED \
+	--add-opens=java.base/sun.util.calendar=ALL-UNNAMED \
+	--add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED \
+	--add-opens=jdk.zipfs/jdk.nio.zipfs=ALL-UNNAMED \
+	-cp com.liferay.portal.tools.db.migration.importer.jar:lib/* \
+	com.liferay.portal.tools.db.migration.importer.DBMigrationImport "$@"
